--- a/01.css
+++ b/01.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
   background-color: rgb(0, 195, 255); /* same as #ffcc99 */
 }
 
@@ -8,4 +8,15 @@ h1 {
 
 p {
   color: rgb(0, 0, 0); /* same as #bb5588 */
+}
+
+h2 {
+  color: rgb(0, 247, 255); /* same as #ff00ff */
+}
+
+h3 {
+  color: rgb(0, 247, 255); /* same as #ff00ff */
+}
+u {
+  color: rgb(0, 38, 255)
 }
